--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Compile
-        uses: chendo/marlin-compile-action@823b15b
+        uses: chendo/marlin-compile-action@main
         id: compile
