--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,5 @@ jobs:
           name: firmware
           path: |
             .pio/build/*/*.bin
+            .pio/build/*/*.elf
+            .pio/build/*/*.hex
