--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,4 @@ jobs:
         with:
           name: firmware
           path: |
-            .pio/build/*/*.bin
-            .pio/build/*/*.elf
-            .pio/build/*/*.hex
+            .pio/build/*/firmware*
